--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,7 +15,8 @@
     <!-- Google Fonts - Montserrat -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap"
+        rel="stylesheet">
 
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
@@ -27,7 +29,12 @@
     <link rel="stylesheet" href="/css/base.css">
     <link rel="stylesheet" href="/css/layout.css">
     <link rel="stylesheet" href="/css/components.css">
+    <link rel="stylesheet" href="/css/animations.css">
+    <link rel="stylesheet" href="/css/debug-contrast.css"> <!-- TEMPORARY: Force high contrast -->
+    <link rel="stylesheet" href="/css/auth-tabs.css">
+    <link rel="stylesheet" href="/css/user-menu.css">
 </head>
+
 <body>
     <!-- Login/Register Screen -->
     <div id="authScreen" class="auth-screen hidden">
@@ -36,6 +43,38 @@
                 <i class="fas fa-wallet auth-icon"></i>
                 <h1>Control de Gastos</h1>
                 <p>Tu asistente personal de finanzas</p>
+            </div>
+
+            <!-- Auth Tabs -->
+            <div class="auth-tabs">
+                <button class="auth-tab active" data-auth-tab="login">
+                    <i class="fas fa-sign-in-alt"></i>
+                    Iniciar Sesión
+                </button>
+                <button class="auth-tab" data-auth-tab="register">
+                    <i class="fas fa-user-plus"></i>
+                    Registrarse
+                </button>
+            </div>
+
+            <!-- Login Form -->
+            <div id="loginForm" class="auth-form active">
+                <h2>Hola, <span id="loginUserName"></span></h2>
+                <p class="auth-subtitle">Ingresa tu PIN para continuar</p>
+
+                <form id="loginFormElement">
+                    <div class="form-group">
+                        <label for="loginPin" class="form-label">
+                            <i class="fas fa-lock"></i> PIN de Seguridad
+                        </label>
+                        <input type="password" id="loginPin" class="form-input pin-input" placeholder="****"
+                            pattern="\d{4}" maxlength="4" required inputmode="numeric" autofocus>
+                    </div>
+
+                    <button type="submit" class="btn btn-primary btn-block">
+                        <i class="fas fa-sign-in-alt"></i> Ingresar
+                    </button>
+                </form>
             </div>
 
             <!-- Register Form -->
@@ -48,79 +87,28 @@
                         <label for="registerNombre" class="form-label">
                             <i class="fas fa-user"></i> Tu Nombre
                         </label>
-                        <input
-                            type="text"
-                            id="registerNombre"
-                            class="form-input"
-                            placeholder="Ej: Juan Pérez"
-                            required
-                            autocomplete="off"
-                        >
+                        <input type="text" id="registerNombre" class="form-input" placeholder="Ej: Juan Pérez" required
+                            autocomplete="off">
                     </div>
 
                     <div class="form-group">
                         <label for="registerPin" class="form-label">
                             <i class="fas fa-lock"></i> PIN de Seguridad (4 dígitos)
                         </label>
-                        <input
-                            type="password"
-                            id="registerPin"
-                            class="form-input pin-input"
-                            placeholder="****"
-                            pattern="\d{4}"
-                            maxlength="4"
-                            required
-                            inputmode="numeric"
-                        >
+                        <input type="password" id="registerPin" class="form-input pin-input" placeholder="****"
+                            pattern="\d{4}" maxlength="4" required inputmode="numeric">
                     </div>
 
                     <div class="form-group">
                         <label for="confirmPin" class="form-label">
                             <i class="fas fa-lock"></i> Confirmar PIN
                         </label>
-                        <input
-                            type="password"
-                            id="confirmPin"
-                            class="form-input pin-input"
-                            placeholder="****"
-                            pattern="\d{4}"
-                            maxlength="4"
-                            required
-                            inputmode="numeric"
-                        >
+                        <input type="password" id="confirmPin" class="form-input pin-input" placeholder="****"
+                            pattern="\d{4}" maxlength="4" required inputmode="numeric">
                     </div>
 
                     <button type="submit" class="btn btn-primary btn-block">
-                        <i class="fas fa-check-circle"></i> Crear Cuenta
-                    </button>
-                </form>
-            </div>
-
-            <!-- Login Form -->
-            <div id="loginForm" class="auth-form hidden">
-                <h2>Hola, <span id="loginUserName"></span></h2>
-                <p class="auth-subtitle">Ingresa tu PIN para continuar</p>
-
-                <form id="loginFormElement">
-                    <div class="form-group">
-                        <label for="loginPin" class="form-label">
-                            <i class="fas fa-lock"></i> PIN de Seguridad
-                        </label>
-                        <input
-                            type="password"
-                            id="loginPin"
-                            class="form-input pin-input"
-                            placeholder="****"
-                            pattern="\d{4}"
-                            maxlength="4"
-                            required
-                            inputmode="numeric"
-                            autofocus
-                        >
-                    </div>
-
-                    <button type="submit" class="btn btn-primary btn-block">
-                        <i class="fas fa-sign-in-alt"></i> Ingresar
+                        <i class="fas fa-user-plus"></i> Crear Cuenta
                     </button>
                 </form>
             </div>
@@ -129,18 +117,59 @@
 
     <!-- Main App -->
     <div id="mainApp" class="app hidden">
-        <!-- Header -->
         <header class="app-header">
             <div class="header-content">
                 <h1><i class="fas fa-wallet"></i> Control de Gastos</h1>
                 <div class="header-actions">
                     <span class="user-welcome">Hola, <strong id="headerUserName"></strong></span>
-                    <button class="btn-icon" id="logoutBtn" title="Cerrar sesión">
-                        <i class="fas fa-sign-out-alt"></i>
+
+                    <!-- Hamburger Menu Button -->
+                    <button class="btn-icon" id="menuToggleBtn" title="Menú">
+                        <i class="fas fa-bars"></i>
                     </button>
                 </div>
             </div>
         </header>
+
+        <!-- Side Drawer Overlay -->
+        <div class="drawer-overlay hidden" id="drawerOverlay"></div>
+
+        <!-- Side Drawer -->
+        <div class="side-drawer" id="sideDrawer">
+            <div class="drawer-header">
+                <div class="drawer-user-info">
+                    <i class="fas fa-user-circle"></i>
+                    <div>
+                        <div class="drawer-user-name" id="drawerUserName"></div>
+                        <div class="drawer-user-subtitle">Usuario</div>
+                    </div>
+                </div>
+                <button class="drawer-close-btn" id="drawerCloseBtn">
+                    <i class="fas fa-times"></i>
+                </button>
+            </div>
+
+            <div class="drawer-content">
+                <button class="drawer-menu-item" id="drawerExportBtn">
+                    <i class="fas fa-download"></i>
+                    <span>Exportar Datos</span>
+                </button>
+
+                <button class="drawer-menu-item" id="drawerImportBtn">
+                    <i class="fas fa-upload"></i>
+                    <span>Importar Datos</span>
+                </button>
+
+                <input type="file" id="importFileInput" accept=".json" style="display: none;">
+
+                <div class="drawer-divider"></div>
+
+                <button class="drawer-menu-item drawer-menu-item-danger" id="drawerLogoutBtn">
+                    <i class="fas fa-sign-out-alt"></i>
+                    <span>Cerrar Sesión</span>
+                </button>
+            </div>
+        </div>
 
         <!-- Navigation Tabs -->
         <nav class="tabs-nav">
@@ -275,43 +304,23 @@
                     <label for="monto" class="form-label">
                         <i class="fas fa-dollar-sign"></i> Monto *
                     </label>
-                    <input
-                        type="number"
-                        id="monto"
-                        name="monto"
-                        class="form-input"
-                        step="0.01"
-                        min="0.01"
-                        required
-                        placeholder="0.00"
-                    >
+                    <input type="number" id="monto" name="monto" class="form-input" step="0.01" min="0.01" required
+                        placeholder="0.00">
                 </div>
 
                 <div class="form-group">
                     <label for="descripcion" class="form-label">
                         <i class="fas fa-align-left"></i> Descripción *
                     </label>
-                    <input
-                        type="text"
-                        id="descripcion"
-                        name="descripcion"
-                        class="form-input"
-                        maxlength="255"
-                        required
-                        placeholder="Ej: Almuerzo"
-                    >
+                    <input type="text" id="descripcion" name="descripcion" class="form-input" maxlength="255" required
+                        placeholder="Ej: Almuerzo">
                 </div>
 
                 <div class="form-group">
                     <label for="categoria_id" class="form-label">
                         <i class="fas fa-tag"></i> Categoría *
                     </label>
-                    <select
-                        id="categoria_id"
-                        name="categoria_id"
-                        class="form-select"
-                        required
-                    >
+                    <select id="categoria_id" name="categoria_id" class="form-select" required>
                         <option value="">Selecciona una categoría</option>
                     </select>
                 </div>
@@ -320,25 +329,15 @@
                     <label for="fecha" class="form-label">
                         <i class="fas fa-calendar"></i> Fecha *
                     </label>
-                    <input
-                        type="date"
-                        id="fecha"
-                        name="fecha"
-                        class="form-input"
-                        required
-                    >
+                    <input type="date" id="fecha" name="fecha" class="form-input" required>
                 </div>
 
                 <div class="form-group">
                     <label for="notas" class="form-label">
                         <i class="fas fa-sticky-note"></i> Notas
                     </label>
-                    <textarea
-                        id="notas"
-                        name="notas"
-                        class="form-textarea"
-                        placeholder="Notas adicionales (opcional)"
-                    ></textarea>
+                    <textarea id="notas" name="notas" class="form-textarea"
+                        placeholder="Notas adicionales (opcional)"></textarea>
                 </div>
 
                 <div class="modal-actions">
@@ -356,4 +355,5 @@
     <!-- Scripts -->
     <script type="module" src="/js/app.js"></script>
 </body>
+
 </html>
