--- a/frontend/index.html
+++ b/frontend/index.html
@@ -33,6 +33,7 @@
     <link rel="stylesheet" href="/css/debug-contrast.css"> <!-- TEMPORARY: Force high contrast -->
     <link rel="stylesheet" href="/css/auth-tabs.css">
     <link rel="stylesheet" href="/css/user-menu.css">
+    <link rel="stylesheet" href="/css/placeholder.css">
 </head>
 
 <body>
@@ -181,6 +182,9 @@
             </button>
             <button class="tab-btn" data-tab="stats">
                 <i class="fas fa-chart-pie"></i> Estadísticas
+            </button>
+            <button class="tab-btn" data-tab="subscriptions">
+                <i class="fas fa-sync-alt"></i> Suscripciones
             </button>
         </nav>
 
