--- a/frontend/index.html
+++ b/frontend/index.html
@@ -176,11 +176,11 @@
             <button class="tab-btn active" data-tab="dashboard">
                 <i class="fas fa-chart-line"></i> Dashboard
             </button>
-            <button class="tab-btn" data-tab="subscriptions">
-                <i class="fas fa-sync-alt"></i> Suscripciones
-            </button>
             <button class="tab-btn" data-tab="expenses">
                 <i class="fas fa-list"></i> Gastos
+            </button>
+            <button class="tab-btn" data-tab="subscriptions">
+                <i class="fas fa-sync-alt"></i> Suscripciones
             </button>
             <button class="tab-btn" data-tab="stats">
                 <i class="fas fa-chart-pie"></i> Estadísticas
@@ -322,7 +322,8 @@
                 <!-- Subscriptions by Category Chart -->
                 <section class="card">
                     <div class="card-header">
-                        <h2 class="card-title"><i class="fas fa-sync-alt"></i> Suscripciones por categoría (mes actual)</h2>
+                        <h2 class="card-title"><i class="fas fa-sync-alt"></i> Suscripciones por categoría (mes actual)
+                        </h2>
                     </div>
                     <div class="chart-container">
                         <canvas id="subscriptionsCategoryChart"></canvas>
@@ -332,7 +333,8 @@
                 <!-- Yearly Comparison Chart -->
                 <section class="card">
                     <div class="card-header">
-                        <h2 class="card-title"><i class="fas fa-chart-bar"></i> Gastos vs Suscripciones (comparación mensual)</h2>
+                        <h2 class="card-title"><i class="fas fa-chart-bar"></i> Gastos vs Suscripciones (comparación
+                            mensual)</h2>
                     </div>
                     <div class="chart-container">
                         <canvas id="comparisonChart"></canvas>
@@ -386,16 +388,16 @@
                     <label for="expenseMonto" class="form-label">
                         <i class="fas fa-dollar-sign"></i> Monto *
                     </label>
-                    <input type="number" id="expenseMonto" name="monto" class="form-input" step="0.01" min="0.01" required
-                        placeholder="0.00">
+                    <input type="number" id="expenseMonto" name="monto" class="form-input" step="0.01" min="0.01"
+                        required placeholder="0.00">
                 </div>
 
                 <div class="form-group">
                     <label for="expenseDescripcion" class="form-label">
                         <i class="fas fa-align-left"></i> Descripción *
                     </label>
-                    <input type="text" id="expenseDescripcion" name="descripcion" class="form-input" maxlength="255" required
-                        placeholder="Ej: Almuerzo">
+                    <input type="text" id="expenseDescripcion" name="descripcion" class="form-input" maxlength="255"
+                        required placeholder="Ej: Almuerzo">
                 </div>
 
                 <div class="form-group">
@@ -461,8 +463,8 @@
                     <label for="subscriptionMonto" class="form-label">
                         <i class="fas fa-dollar-sign"></i> Monto *
                     </label>
-                    <input type="number" id="subscriptionMonto" name="monto" class="form-input" step="0.01" min="0.01" required
-                        placeholder="0.00">
+                    <input type="number" id="subscriptionMonto" name="monto" class="form-input" step="0.01" min="0.01"
+                        required placeholder="0.00">
                 </div>
 
                 <div class="form-group">
