feat: add initial frontend HTML structure for the expense control PWA, including authentication, navigation, and dashboard.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -174,7 +174,7 @@
         <!-- Navigation Tabs -->
         <nav class="tabs-nav">
             <button class="tab-btn active" data-tab="dashboard">
-                <i class="fas fa-chart-line"></i> Dashboard
+                <i class="fas fa-chart-line"></i> Dash
             </button>
             <button class="tab-btn" data-tab="expenses">
                 <i class="fas fa-list"></i> Gastos
@@ -182,8 +182,14 @@
             <button class="tab-btn" data-tab="subscriptions">
                 <i class="fas fa-sync-alt"></i> Suscripciones
             </button>
+            <button class="tab-btn" data-tab="installments">
+                <i class="fas fa-credit-card"></i> Cuotas
+            </button>
+            <button class="tab-btn" data-tab="savings">
+                <i class="fas fa-piggy-bank"></i> Ahorros
+            </button>
             <button class="tab-btn" data-tab="stats">
-                <i class="fas fa-chart-pie"></i> Estadísticas
+                <i class="fas fa-chart-pie"></i> Stats
             </button>
         </nav>
 
@@ -285,6 +291,34 @@
                         </div>
                     </div>
                 </section>
+            </div>
+
+            <!-- Installments Tab (Cuotas) -->
+            <div id="installmentsTab" class="tab-content">
+                <div class="placeholder-content">
+                    <div class="placeholder-icon">
+                        <i class="fas fa-credit-card"></i>
+                    </div>
+                    <h2 class="placeholder-title">Cuotas</h2>
+                    <p class="placeholder-description">
+                        Próximamente: Gestión de pagos en cuotas.<br>
+                        Registra compras pagadas a plazos con o sin intereses, y controla el progreso de cada cuota.
+                    </p>
+                </div>
+            </div>
+
+            <!-- Savings Tab (Ahorros) -->
+            <div id="savingsTab" class="tab-content">
+                <div class="placeholder-content">
+                    <div class="placeholder-icon">
+                        <i class="fas fa-piggy-bank"></i>
+                    </div>
+                    <h2 class="placeholder-title">Ahorros</h2>
+                    <p class="placeholder-description">
+                        Próximamente: Seguimiento de ahorros.<br>
+                        Registra y acumula tus ahorros mes a mes para alcanzar tus metas financieras.
+                    </p>
+                </div>
             </div>
 
             <!-- Expenses Tab -->
